# IronRe2-Batteries

./: .azure-pipelines.yml  .gitignore  .gitmodules  BatteryPackage.Darwin.csproj  BatteryPackage.Linux.csproj  BatteryPackage.Windows.csproj  BatteryPackage.csproj  CMakeLists.txt  Directory.Build.props  IronRe2-Batteries.sln  LICENSE  README.md  build.bat  build.bat   build.cake  build.ps1  build.sh  directory.build.props  nuget.config
.config/: dotnet-tools.json
.github/workflows/: ci.yaml  contributors.yml  publish.yml
Windows/: CMakeLists.txt
nuget_contents/: IronRe2-Batteries.Windows.targets
